	fixed php pdo driver to return null rather than 0 for null integer
		fields and bind null rather than 0 for null integer input
		binds
	added attribute to return nulls as nulls or empty strings to php pdo
	added parameters for connecting to mysql via ssl
	added a few tweaks to support DB2 < 8.0
	fixed bad return value type in python getConnectionPort method

0.55 - fixed a sql translation bug related to exists clauses
	added deployment projects for windows
	tweaked make.batch install target to install 32-bit files under
		C:\Program Files (x86)
	added a timeout parameter to db2 and odbc connect strings
	fixed a bug that could cause a connection's ttl to fail because a
		semaphore was left signalled when another connection's ttl
		expired
	updated handoff="proxy" code to work with sessionhandler="thread"
	replaced waitpid call in sqlrscaler with rudiments equivalent
	got the server-side stuff to compile on windows
	added configurable fetch buffer sizes to sybase, freetds and db2
	connections re-distribute themselves periodically if the database is
		behind a load balancer now
	fixed a bug that caused sqlrsh to incorrectly interpret internal
		commands with leading whitespace when run from a script or on
		the command line
	fixed a bug that caused cursors not to be completely cleaned up after
		when dynamic scaling is used
	fixed a bug that caused the response timeout to be handled improperly
	added response timeout command to sqlrsh
	added support for clobs/blobs with firebird
	fixed a blob-related bug with sqlite
	added support for blob input binds with db2
	added support for clob/blob output binds with db2
	improved clob/blob fetching with db2
	inputBindClob/Blob methods work with all db's now
	added -Wno-unknown-pragmas flag (if it it supported) to java build for
		solaris 8
	updated default item buffer sizes to 32768 for sybase, freetds, db2
		and odbc
	applied Gerhard Lausser's patch to improve Oracle instantclient
		detection
