@@ -58,6 +58,8 @@ sqlrsh -host localhost -user sqlruser -password sqlrpassword
 </code>
 </blockquote>
 
+<p>(<b>NOTE:</b> For versions of SQL Relay prior to 0.56, additional parameters were required for a minimal configuration.  In particular, either the port or socket parameter was required in the instance tag, the dbtype parameter was required in the instance tag, and connectionid and metric parameters were required in the connection tag.  See below, or see the <a href="configreference.html">Configuration Reference</a> for information about these parameters.)</p>
+
 
 <br><br><a name="connections"></a>
 <span class="heading2">Database Connections</span><br>
