@@ -84,7 +84,7 @@
 <li><b>maxcursors</b> - The maximum number of database cursors that may be opened for a single client session.  If this is set to a number lower than the value for the <b>cursors</b> parameter then it will be automatically bumped up to the value set for <b>cursors</b>.  Defaults to the same value as <b>cursors</b>.</li>
 <li><b>cursors_growby</b> - The number of new cursors that will be opened at a time when new cursors are required.  Defaults to 1.</li>
 <li><b>authtier</b> - Where to authenticate, see <a href="#complex">Complex Attributes</a> below.  Can be set to "connection". or "database".  Defaults to connection.</li>
-<li><b>sessionhandler</b> - Method used by the listener to handle a client session.  Options are either "process" (the default) or "thread".  When a client connects to the listener, a child is forked to handle the connection.  The child can be either a process or a thread.  Threads should perform better but aren't supported on all platforms.  Also, currently, listenertimeout!="0" is not supported when sessionhandler="thread".  Defaults to "process".</li>
+<li><b>sessionhandler</b> - Method used by the listener to handle a client session.  Options are either "process" (the default) or "thread".  When a client connects to the listener, a child is forked to handle the connection.  The child can be either a process or a thread.  Threads should perform better but aren't supported on all platforms.  Defaults to "process".</li>
 <li><b>handoff</b> - Method for handing off a client from listener to connection, can be one of: "pass" or "proxy", see <a href="#complex">Complex Attributes</a> below.  Defaults to "pass".</li>
 <li><b>deinedips</b> - A <a href="http://www.regular-expressions.info">regular expression</a> indicating which IP addresses will be denied access (for example, to deny access to all clients: deniedips=".*")  By default, no IP addresses are denied.</li>
 <li><b>allowedips</b> - A <a href="http://www.regular-expressions.info">regular expression</a> indicating which IP addresses will be allowed access, overriding deniedips (for example, to allow access to clients from the 192.168.2.0 and 64.45.22.0 networks: allowedips="(192\.168\.2\..*|64\.45\.22\..*)")  By default, all IP addresses are allowed.</li>
